--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,9 +2,9 @@
 <html class="no-js" lang="en-US">
 {% include header.html %}
 <body class="flex flex-col h-screen">
-  <div class="bg-indigo-800 text-white py-16">
+  <div class="bg-green-800 text-white py-16">
     <div class="container mx-auto px-4">
-      <a href="{{ '/' | relative_url }}" class="text-4xl font-bold pb-0 hover:text-indigo-300 font-serif" title="Home">{{ site.title }}</a>
+      <a href="{{ '/' | relative_url }}" class="text-4xl font-bold pb-0 hover:text-green-300 font-serif" title="Home">{{ site.title }}</a>
       <p class="text-xl">{{ site.author }}</p>
     </div>
   </div>
