:pencil: Updates header

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,9 @@
   <div class="bg-green-800 text-white py-16">
     <div class="container mx-auto px-4">
       <a href="{{ '/' | relative_url }}" class="text-4xl font-bold pb-0 hover:text-green-300 font-serif" title="Home">{{ site.title }}</a>
-      <p class="text-xl">{{ site.author }}</p>
+      <p class="text-xl">
+        <p>Curated by <a href="https://jefftriplett.com">Jeff Triplett</a> &amp; <a href="https://wsvincent.com/about/">William Vincent</a>.</p>
+      </p>
     </div>
   </div>
   <div class="flex-grow">
