--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,8 @@
 <div>
-  <p class="text-center p-2 text-gray-800 bg-green-100 text-sm">
-    Purpletual Blog Theme by <a href="https://www.csrhymes.com" class="text-green-800 hover:text-green-900">C.S. Rhymes</a>
-  </p>
+  <p class="text-center p-2 bg-green-800 text-white text-sm">
+    <!-- <a href="" class="text-green-800 hover:text-green-900">C.S. Rhymes</a> -->
+    &copy;2019-2022 Django News
+    | Django News is not associated with the Django Software Foundation. Django is a registered trademark of the Django Software Foundation.
+    </p>
 </div>
 
